# ignis

./: .gitmodules  Cargo.toml
.cargo/: config.toml
boot/: limine.conf
crates/bevy-compositor/: Cargo.toml
crates/bevy-compositor/src/: lib.rs  state.rs
crates/bevy-compositor/src/state/: buffer.rs  compositor.rs  dmabuf.rs  output.rs  primary_selection.rs  seat.rs  security_context.rs  selection.rs  xdg_shell.rs
crates/bevy-compositor/src/util/: texture.rs
crates/bevy-smithay/: Cargo.toml
crates/bevy-smithay/src/: convert.rs  external_image.rs  lib.rs  state.rs  util.rs
crates/bevy-smithay/src/state/: data_control.rs  data_device.rs  input_method.rs  keyboard_shortcuts_inhibit.rs  shm.rs  tablet_seat.rs  xdg_foreign.rs
crates/bevy-smithay/src/util/: drm_node.rs
crates/mocha-comp/: Cargo.toml
crates/mocha-comp/src/: background.txt  main.rs
crates/mocha-init/: Cargo.toml
crates/mocha-settings/: Cargo.toml
crates/mocha_cargo/: Cargo.toml
crates/mocha_ident/: Cargo.toml
crates/mocha_ui/: Cargo.toml  README.md
crates/mocha_ui/src/: handlers.rs  keyboard.rs  main.rs  mouse.rs
crates/mocha_utils/: Cargo.toml
crates/mocha_zig/: Cargo.toml
kernel/: Cargo.toml  build.rs
kernel/src/: boot.rs  main.rs
src/: args.rs  main.rs
xtask/src/: main.rs
