[profile.dev]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3

[workspace]
members = ["crates/*"]
resolver = "3"

[patch.crates-io]
naga = { git = "https://github.com/mizz1e/wgpu", rev = "f63eb6425a0070fccfbab4cb74371602dd37f424" }
wgpu = { git = "https://github.com/mizz1e/wgpu", rev = "f63eb6425a0070fccfbab4cb74371602dd37f424" }
wgpu-core = { git = "https://github.com/mizz1e/wgpu", rev = "f63eb6425a0070fccfbab4cb74371602dd37f424" }
wgpu-hal = { git = "https://github.com/mizz1e/wgpu", rev = "f63eb6425a0070fccfbab4cb74371602dd37f424" }
wgpu-types = { git = "https://github.com/mizz1e/wgpu", rev = "f63eb6425a0070fccfbab4cb74371602dd37f424" }
