[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
core_maths = { version = "0.1.1", default-features = false }
cosmic-text = { version = "0.14.2", default-features = false, features = ["no_std", "swash"] }
limine = { version = "0.4.0", default-features = false, features = ["ipaddr", "uuid"] }
linked_list_allocator = { version = "0.10.5", default-features = false, features = ["use_spin"] }
log = { version = "0.4.27", default-features = false }
spin = { version = "0.10.0", default-features = false, features = ["barrier", "lazy", "lock_api", "mutex", "once", "rwlock", "spin_mutex"] }
swash = { version = "0.2.4", default-features = false, features = ["libm"] }
