[package]
name = "mocha-comp"
version = "0.0.0"
edition = "2021"

[dependencies]
ash = { workspace = true }
bevy = { workspace = true, features = ["bevy_pbr", "bevy_text", "bevy_ui", "bevy_window", "tonemapping_luts"] }
bevy-smithay = { workspace = true }
thiserror = { workspace = true }
wgpu = { workspace = true }
