[package]
name = "mocha-init"
version = "0.0.0"
edition = "2021"

[dependencies]
codespan-reporting = { version = "0.11.1", default-features = false, features = ["ascii-only"] }
futures-util = { version = "0.3.28", default-features = false }
indexmap = { version = "2.0.0", default-features = false, features = ["serde"] }
ipnetwork = { version = "0.20.0", default-features = false, features = ["serde"] }
mocha-os = { version = "0.0.0", path = "../mocha-os", default-features = false }
rtnetlink = { version = "0.13.1", default-features = false, features = ["tokio_socket"] }
serde = { workspace = true, features = ["derive", "std"] }
thiserror = { version = "1.0.47", default-features = false }
tokio = { workspace = true, features = ["macros", "net", "process", "rt-multi-thread", "signal", "time"] }
toml = { workspace = true, features = ["display", "parse"] }
