[package]
name = "mocha-settings"
version = "0.1.0"
edition = "2021"

[dependencies]
camino = { version = "1.1.6", default-features = false, features = ["serde1"] }
codespan-reporting = { version = "0.11.1", default-features = false }
ipnetwork = { version = "0.20.0", default-features = false, features = ["serde"] }
serde = { workspace = true, features = ["derive", "std"] }
toml = { workspace = true, features = ["display", "parse"] }
