[package]
name = "mocha_cargo"
version = "0.0.0"
edition = "2021"

[dependencies]
cargo_metadata = { version = "0.15.4", default-features = false }
mocha_fs = { version = "0.0.0", path = "../mocha_fs", default-features = false }
mocha_target = { version = "0.0.0", path = "../mocha_target", default-features = false }
mocha_utils = { version = "0.0.0", path = "../mocha_utils", default-features = false }
serde = { workspace = true, features = ["derive", "std"] }
serde_json = { version = "1.0.96", default-features = false, features = ["std"] }
tokio = { workspace = true, features = ["io-util", "process"] }
