[package]
name = "mocha_ui"
version = "0.0.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.0", path = "../../../bevy", default-features = false, features = ["bevy_ui", "bevy_ui_picking_backend", "bevy_window", "std", "async_executor", "animation", "bevy_mesh_picking_backend", "bevy_state", "bevy_scene", "bevy_color", "bevy_audio", "bevy_asset", "bevy_render", "bevy_text", "tonemapping_luts", "multi_threaded", "bevy_pbr", "bevy_input_focus", "bevy_picking", "bevy_core_pipeline", "bevy_gltf", "trace", "bevy_log", "jpeg", "png", "mp3"] }
smithay = { git = "https://github.com/Smithay/smithay", rev = "10f0f1e3a16fd2fd2ac919b1f5a0d44713cce758", version = "0.6.0", default-features = false, features = ["backend_drm", "backend_gbm", "backend_libinput", "backend_session_libseat", "backend_udev", "desktop", "wayland_frontend"] }
smithay-drm-extras = { git = "https://github.com/Smithay/smithay", rev = "10f0f1e3a16fd2fd2ac919b1f5a0d44713cce758", version = "0.1.0", default-features = false, features = ["display-info"] }
smol_str = { version = "0.2.2", default-features = false }
time = { version = "0.3.41", default-features = false, features = ["formatting", "local-offset", "macros", "parsing", "std"] }
